<resources>
    <string name="app_name">DroidPractice1</string>
    <string name="article_title">Артгида</string>
    <string name="marker">Спецпроект - 19.08.26</string>
    <string name="heading1">От минора до мажора:</string>
    <string name="heading2">девять проектов Венецианской биеннале</string>
    <string name="text1">61-я Венецианская биеннале открылась на фоне траура по ее куратору Койо Коуо и громких публичных дискуссий о политизации национальных павильонов, принципах отбора художников и границах институциональной независимости. При этом старейшая международная выставка продолжает обращаться к не менее занимательным, фундаментальным сюжетам: утрате и обретению дома, экологической хрупкости, коллективной памяти и политической репрезентации, а также способности искусства отражать стремительную изменчивость мира. Мария Кравцова, Анастасия Дергоусова, Мария Шишканова и Илья Леонов разбирают девять самых ярких проектов текущей биеннале.</string>
    <string name="marker1">Авторы</string>
    <string name="authors1">Анастасия Дергоусова\nМария Кравцова\nИлья Леонов\nМария Шишканова</string>
    <string name="pavilion1">Павильон Святого престола</string>
    <string name="pavilion2">Павильон США</string>
    <string name="heading3">Павильон Святого престола.\nМистический сад монастыря Ордена босых кармелитов, Церковь Санта-Мария-Аусилиатриче.\n«Ухо — око души» (The Ear is the Eye of the Soul)</string>
    <string name="footnote1">Участники: Александр Клуге, сестры-бенедиктинки аббатства Святой Хильдегарды в Эбингене, Бхану Капил, Брайан Ино, Карминьо, Катерина Барбьери, Девонте Хайнс, FKA Twigs, Холли Херндон и Мэт Драйхёрст, Илда Давид, Джим Джармуш, Кали Мэлоун, Кадзу Макино, Ларааджи, Мередит Монк, Moor Mother, Отобонг Нканга, Патти Смит, Прешес Окойомон, Рауль Сурита, Soundwalk Collective, Сьюзан Чани</string>
    <string name="text2">Венецианская биеннале — это десятки выставок и событий по всему городу, а значит, стресс, перенасыщение контентом, постоянный страх что-то пропустить, упустить или не успеть. Когнитивный перегруз заканчивается одним и тем же: уставшие профессиональные зрители пишут в соцсетях о желании больше никогда так не мучить свою нервную систему и вместо современного искусства смотреть, например, на тающие льды у побережья Гренландии.\nПавильон Святого Престола (то есть Ватикана) привлекает внимание уже потому, что раз за разом предлагает опыт, вообще не предусмотренный гиперпотребительской логикой биеннале. Если в прошлом году он обращался к телесному переживанию несвободы, милосердия и надежды (проект разворачивался в пространствах женской тюрьмы на острове Джудекка, а участие в нем принимали заключенные), то в этом — замедления и созерцания.
        \nПервая часть павильона — рядом с железнодорожным вокзалом, где в обычно закрытом для мирян саду монастыря Ордена босых кармелитов, основанного в XVII столетии, разворачивается аудиоинсталляция. Звук медленно ведет посетителя в наушниках по дорожкам регулярного полусада-полуогорода, монашеские песнопения сменяются современными аранжировками средневековых хоралов, стихами и тишиной. В создании звукового сопровождения приняло участие максимальное количество мировых знаменитостей от Патти Смит, Брайана Ино, Джима Джармуша и Мередит Монк до Отобонг Нканги и Казу Макино. Вторая часть павильона находится в пространстве церкви Санта-Мария-Аусилиатриче, где развернут современный скрипторий и видеоинсталляция звезды 57-й биеннале — немецкого режиссера и писателя Александра Клуге, скончавшегося незадолго до открытия выставки.</string>
    <string name="footnote2">«Ухо — око души». Фрагмент экспозиции Павильона Святого престола в Мистическом саду монастыря Ордена босых кармелитов. 61-я Венецианская биеннале. 2026.</string>
    <string name="text3">Кураторами проекта выступили Ханс Ульрих Обрист и Бен Викерс, в сотрудничестве с Soundwalk Collective (они сплели фрагменты, звучащие в Мистическом саду, в единую композицию). Но еще одним значимым соавтором проекта является сестра Маура Затоньи — монахиня-бенедиктинка и доктор теологии: не в последнюю очередь ее усилиями в 2012 году была канонизирована средневековая монахиня, мистик, травница, писательница и поэтесса Хильдегарда Бингенская (изображается с пером и раскрытой книгой или свитком или даже со стилосом и восковой табличкой (церой) в руках). Собственно, вокруг фигуры Хильдегарды, ее стихов и музыкальных сочинений и вырастает, как маргаритки из мягкой весенней травы, концепция павильона, вернее, повествование о мире и красоте мира. Ветер колеблет травинки, а среди крошечных белых цветов «Мистического сада» вдруг становится зримым их единственный розовый собрат — макромир современности с его всеохватным, поверхностным видением вдруг превращается в микромир, наполненный тысячей жизней разных живых существ.</string>
    <string name="heading4">Павильон США, сады Джардини. Альма Аллен. «Называй меня ветерок» (Call me the breeze)</string>
    <string name="footnote3">«Скука» — слово, которое чаще всего звучит в описаниях павильона США. Рецензенты также отмечают «пустоту», «декоративность», «банальность» и язвят, что работы уже много лет живущего в Мексике Альмы Аллена органичнее смотрелись бы в лобби отеля во Флориде, а не в национальном представительстве страны в Венеции.</string>
    <string name="text4">Крупные, выполненные из дорогостоящих материалов (полированная бронза, мрамор, травертин) биоморфные скульптуры, в которые при желании можно «всмотреть» очертания фигур людей, животных или плодов растений, молчаливо присутствуют, манифестируя пластику, а не критику. При этом нельзя сказать, что «объекты для отелей» такая уж редкость на биеннальских просторах. Более того, сам метод Аллена, «не глядя» разминающего глину в ладонях и затем переводящего получившуюся форму в избранный материал, идентичен тому, как создавалась, например, «Большая глина» Урса Фишера. Несмотря на это для американской критики и художественной общественности павильон США стал самым скандальным за последние полтора десятилетия. Но для того чтобы понять основания коллективного недовольства, необходимо разобраться в институциональном устройстве павильона.</string>
    <string name="marker2">Раз в неделю - 18.09.26</string>
    <string name="heading5">Лучшие зарубежные выставки осени</string>
    <string name="exposition1">Системная сборка. Нижний Новгород</string>
    <string name="date1">11.09 – 01.11.26</string>
    <string name="place1">Париж</string>
    <string name="exposition2">Яёи Кусама</string>
    <string name="date2">11.09 – 17.01.27</string>
    <string name="palce2">Амстердам</string>
    <string name="heading6">System Assembly. Nizhniy Novgorod\nСистемная сборка. Нижний Новгород</string>
    <string name="name1">Нижегородские художники в Париже.</string>
    <string name="footnote8">11.09 — 01.11.26\nРусский духовно-культурный православный центр\n📍Quai Jacques Chirac, 1</string>
    <string name="footnote9">В Русский духовно-культурный православный центр на парижской набережной Бранли приехало нижегородское современное искусство. На выставке, организованной галереей «Триумф», объединяются ключевые участники художественной среды города: галереи Futuro и 9Б, центр «Терминал А» и студия «Тихая», представляющие своих резидентов и их магистральные проекты. Разнообразные формы — от живописи и графики до керамики и инсталляций — раскрывают столь же разнообразные авторские темы, затрагивающие локальную память, современную идентичность и городскую среду. Среди героев выставки — ритуально-хтонические образы Полины Стриж и Дани Пирогова, сюрреалистически лаконичные ассамбляжи Андрея Оленева, а также яркая авангардная керамика Софии Погудиной.\n[0+]</string>
    <string name="phototext1">Фрагмент выставки «Системная сборка». 2026./nФото: Русский духовно-культурный православный центр, Париж / Галерея «Триумф»</string>
    <string name="heading7">Yayoi Kusama\nЯёи Кусама</string>
    <string name="foodnote10">Посмертная ретроспектива «иконы» японского искусства.</string>
    <string name="footnode11">11.09 — 17.01.27\nМузей Стеделейк\n📍Museumplein, 10</string>
    <string name="text7">Передвижная ретроспектива Яёи Кусамы, сейчас осевшая в амстердамском Стеделейке, стала первой выставкой японской художницы после ее смерти в августе 2026 года. К наследию «иконы» современного искусства кураторы подошли обстоятельно. Перед зрителями последовательно разворачивается калейдоскоп ее психоделических образов, медитативных инсталляций из стекла и светильников и, конечно, всевозможные переплетения поверхностей и форм, расписанных узнаваемым «горошком». Наполненная вездесущими пестрыми орнаментами и иллюзорными эффектами экспозиция растворяется в едином визуальном мареве, давая прочувствовать «слияние с вечным», бывшее для художницы основой и целью ее работы.\n[0+]</string>
    <string name="phototext2">Яёи Кусама. 2002. Айтинская триеннале. Япония. 2010.\nФото: Victoria Miro / David Zwirner / предоставлено Ota Fine Arts</string>
</resources>