<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity"
    android:padding="8dp">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:navigationIcon="@drawable/arrow_back"
        android:title="@string/article_title"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/rf_dewi_extended_bold"
                android:text="@string/marker2"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingHorizontal="70dp"
                android:paddingTop="8dp"
                android:text="@string/heading5"
                android:fontFamily="@font/kristolit_trial_black_italic"
                android:textSize="28sp"
                android:textColor="#000000"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="50dp">

                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/exposition1"
                        android:fontFamily="@font/rf_dewi_extended_bold"
                        android:textColor="#000000"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/date1"
                        android:fontFamily="@font/copyright_bold_italic"
                        android:textColor="#000000"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/place1"
                        android:fontFamily="@font/rf_dewi_extended_bold"
                        android:textColor="#000000"/>
                </LinearLayout>



                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/exposition2"
                        android:fontFamily="@font/rf_dewi_extended_bold"
                        android:textColor="#000000"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/date2"
                        android:fontFamily="@font/copyright_bold_italic"
                        android:textColor="#000000"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/palce2"
                        android:fontFamily="@font/rf_dewi_extended_bold"
                        android:textColor="#000000"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/heading6"
                android:fontFamily="@font/rf_dewi_extended_bold"
                android:textSize="24sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@string/name1"
                android:fontFamily="@font/copyright_bold_italic"
                android:textSize="24sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="26dp"
                android:text="@string/footnote8"
                android:fontFamily="@font/rf_dewi_extended_bold"
                android:textSize="16sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/footnote9"
                android:fontFamily="@font/rf_dewi_extended_bold"
                android:textSize="18sp"
                android:textColor="#000000"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/previousButton"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="←" />

                <ImageView
                    android:id="@+id/articleImage"
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:scaleType="centerInside"
                    android:src="@drawable/photo1" />

                <Button
                    android:id="@+id/nextButton"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="→" />

            </LinearLayout>

            <TextView
                android:id="@+id/photoCaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/phototext1"
                android:fontFamily="@font/copyright_bold_italic"
                android:textColor="#000000"
                android:textSize="14sp" />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="50dp"
                android:text="@string/heading7"
                android:fontFamily="@font/rf_dewi_extended_bold"
                android:textSize="24sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@string/foodnote10"
                android:fontFamily="@font/copyright_bold_italic"
                android:textSize="24sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="26dp"
                android:text="@string/footnode11"
                android:fontFamily="@font/rf_dewi_extended_bold"
                android:textSize="16sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text7"
                android:fontFamily="@font/rf_dewi_extended_bold"
                android:textSize="18sp"
                android:textColor="#000000"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/previousButton2"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="←" />

                <ImageView
                    android:id="@+id/articleImage2"
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:scaleType="centerInside"
                    android:src="@drawable/photo6" />

                <Button
                    android:id="@+id/nextButton2"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="→" />

            </LinearLayout>

            <TextView
                android:id="@+id/photoCaption2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingBottom="30dp"
                android:gravity="center"
                android:text="@string/phototext2"
                android:fontFamily="@font/copyright_bold_italic"
                android:textColor="#000000"
                android:textSize="14sp" />


            <Switch
                android:id="@+id/readSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="20dp"
                android:text="Прочитано" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>